remove email-pass link generator

--- a/scripts/emailservice/templates/register-body.mustache
+++ b/scripts/emailservice/templates/register-body.mustache
@@ -1,1 +1,1 @@
-<p>Registration link: <a href="{{registrationUrl}}"><b>{{registrationUrl}}</b></a></p>
+<p>Registration link: <a href="https://lvh.me:9443/index.html?registerToken={{token}}"><b>https://lvh.me:9443/index.html?registerToken={{token}}</b></a></p>
